<resources>
    <string name="about_album_label">About %s</string>
    <string name="about_settings_summary">Team, social links</string>
    <string name="accent_color">Accent color</string>
    <string name="accent_color_desc">The theme accent color, defaults to teal</string>
    <string name="action_about">About</string>
    <string name="action_add_to_blacklist">Add to Blacklist</string>
    <string name="action_add_to_favorites">Add to favorites</string>
    <string name="action_add_to_playing_queue">Add to playing queue</string>
    <string name="action_add_to_playlist">Add to playlist</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_cast">Cast</string>
    <string name="action_clear_playing_queue">Clear playing queue</string>
    <string name="action_cycle_repeat">Cycle repeat mode</string>
    <string name="action_delete">Delete</string>
    <string name="action_delete_from_device">Delete from device</string>
    <string name="action_details">Details</string>
    <string name="action_edit">Edit</string>
    <string name="action_fast_forward">Fast-forward 10s</string>
    <string name="action_go_to_album">Go to album</string>
    <string name="action_go_to_artist">Go to artist</string>
    <string name="action_go_to_genre">Go to genre</string>
    <string name="action_go_to_lyrics">Go to Lyrics</string>
    <string name="action_go_to_start_directory">Go to start directory</string>
    <string name="action_grant">Grant</string>
    <string name="action_grid_size">Grid size</string>
    <string name="action_grid_size_land">Grid size (land)</string>
    <string name="action_new_playlist">New playlist</string>
    <string name="action_next">Next</string>
    <string name="action_play">Play</string>
    <string name="action_play_all">Play all</string>
    <string name="action_play_next">Play next</string>
    <string name="action_play_pause">Play/Pause</string>
    <string name="action_previous">Previous</string>
    <string name="action_queue">Show/Hide Playing Queue</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_remove_from_favorites">Remove from favorites</string>
    <string name="action_remove_from_playing_queue">Remove from playing queue</string>
    <string name="action_remove_from_playlist">Remove from playlist</string>
    <string name="action_rename">Rename</string>
    <string name="action_reorder_playing_queue">Reorder playing queue</string>
    <string name="action_rewind">Rewind 10s</string>
    <string name="action_save_playing_queue">Save playing queue</string>
    <string name="action_scan">Scan</string>
    <string name="action_search">Search</string>
    <string name="action_set">Start</string>
    <string name="action_set_as_ringtone">Set as ringtone</string>
    <string name="action_set_as_start_directory">Set as start directory</string>
    <string name="action_settings">"Settings"</string>
    <string name="action_share">Share</string>
    <string name="action_shuffle_all">Shuffle all</string>
    <string name="action_shuffle_playlist">Shuffle playlist</string>
    <string name="action_sleep_timer">Sleep timer</string>
    <string name="action_sort_order">Sort order</string>
    <string name="action_tag_editor">Tag editor</string>
    <string name="action_toggle_favorite">Toggle favorite</string>
    <string name="action_toggle_shuffle">Toggle shuffle mode</string>
    <string name="action_update">Update notification</string>
    <string name="adaptive">Adaptive</string>
    <string name="add_action">Add</string>
    <string name="add_playlist_title">"Add to playlist"</string>
    <string name="add_time_framed_lryics">Add Time Framed Lyrics</string>
    <string name="added_song_count_to_playlist">Added %1$d song(s) to %2$s</string>
    <string name="added_title_to_playing_queue">"Added 1 title to the playing queue."</string>
    <string name="added_x_titles_to_playing_queue">Added %1$d titles to the playing queue.</string>
    <string name="album">Album</string>
    <plurals name="albumSongs">
        <item quantity="one">Song</item>
        <item quantity="other">Songs</item>
    </plurals>
    <string name="album_artist">Album Artist</string>
    <plurals name="albums">
        <item quantity="one">Album</item>
        <item quantity="other">Albums</item>
    </plurals>
    <string name="alert">Alert!</string>
    <string name="always">Always</string>
    <string name="apex_music">Apex Music</string>
    <string name="app_share">Hey check out this cool music player at: https://play.google.com/store/apps/details?id=%s</string>
    <string name="app_shortcut_shuffle_all_short">Shuffle</string>
    <string name="app_shortcut_top_tracks_short">Top Tracks</string>
    <string name="app_widget_big_name">Big</string>
    <string name="app_widget_classic_name">Classic</string>
    <string name="app_widget_full_circle_name">Full Circle</string>
    <string name="app_widget_full_name">Full</string>
    <string name="app_widget_queue_name">Queue</string>
    <string name="app_widget_square_name">Square</string>
    <string name="artist">Artist</string>
    <string name="artists">Artists</string>
    <string name="audio_fade_duration">Audio fade duration</string>
    <string name="audio_focus_denied">Audio focus denied.</string>
    <string name="audio_settings_summary">Change the sound settings and adjust the equalizer controls</string>
    <string name="auto">Auto</string>
    <string name="black_theme_name">Jet Black</string>
    <string name="colors">Colors</string>
    <string name="equalizer">Equalizer</string>
    <string name="library_categories">Library Categories</string>
    <string name="pref_header_album">Album style</string>
    <string name="pref_header_controls">Controls</string>
    <string name="pref_header_general">Theme</string>
    <string name="pref_header_library">Library</string>
    <string name="pref_header_lockscreen">Lockscreen &amp; WearOS</string>
    <string name="pref_header_lyrics">Lyrics</string>
    <string name="pref_header_ui">User Experience</string>
    <string name="pref_keep_screen_on_summary">Keep in mind that enabling this feature may affect battery life</string>
    <string name="pref_snow_fall_title">Snow Fall Effect</string>
    <string name="pref_summary_album_art_on_lockscreen">Use the currently playing song album cover as the lockscreen wallpaper &amp; wearOS media controls. on android 11+ the lockscreen wallpaper feature has been removed so this option will only work for wearOS media controls</string>
    <string name="pref_summary_audio_ducking">Lower the volume when a system sound is played or a notification is received</string>
    <string name="pref_summary_audio_fade">Fade audio when song is paused or played</string>
    <string name="pref_summary_auto_play">Maintain playback status while navigating through the playing queue manually. This also applies to widgets and the playback notification</string>
    <string name="pref_summary_blurred_album_art">Blur the album cover on the lockscreen and wearOS media controls. Can cause problems with third party apps and widgets</string>
    <string name="pref_summary_carousel_effect">Carousel effect for the album art in the now playing screen. Note that Card and Blur Card themes won\'t work</string>
    <string name="pref_summary_colored_app">The background and control button colors change according to the album art from the now playing screen</string>
    <string name="pref_summary_colored_app_shortcuts">Colors the app shortcuts in the accent color. Every time you change the color please toggle this to take effect</string>
    <string name="pref_summary_desaturated_color">As per Material Design guide lines in dark mode colors should be desaturated</string>
    <string name="pref_summary_expand_now_playing_panel">Clicking on the notification will show now playing screen instead of the home screen</string>
    <string name="pref_summary_extra_controls">Add extra controls for mini player</string>
    <string name="pref_summary_extra_song_info">Show extra Song information, such as file format, bitrate and frequency</string>
    <string name="pref_summary_library_categories">Configure visibility and order of library categories.</string>
    <string name="pref_summary_manage_audio_focus">Always play audio in background regardless of anything else being played</string>
    <string name="pref_summary_progress_bar_alignment">Show the horizontal progress bar on top of mini player instead of the bottom</string>
    <string name="pref_summary_progress_bar_style">Show a horizontal progress bar instead of the circle progress bar</string>
    <string name="pref_summary_remember_tab">Navigate to the last used tab on start</string>
    <string name="pref_summary_show_lyrics">Show synced or embedded lyrics</string>
    <string name="pref_summary_swipe_anywhere_now_playing">Enables changing song by swiping anywhere on the now playing screen</string>
    <string name="pref_summary_swipe_gestures">Allow swipe gestures in the mini player</string>
    <string name="pref_summary_swipe_to_dismiss">Swipe down to dismiss mini player</string>
    <string name="pref_summary_synced_lyrics">Show synced lyrics</string>
    <string name="pref_summary_toggle_volume">If enough space is available, show volume controls in the now playing screen</string>
    <string name="pref_summary_wallpaper_accent">Extract accent color from wallpaper</string>
    <string name="pref_title_album_art_on_lockscreen">Show Album Cover</string>
    <string name="pref_title_album_cover_style">Album Cover Theme</string>
    <string name="pref_title_album_cover_transform">Album Cover Skip</string>
    <string name="pref_title_app_shortcuts">Colored App Shortcuts</string>
    <string name="pref_title_appbar_mode">Header Style</string>
    <string name="pref_title_audio_ducking">Reduce Volume On Focus Loss</string>
    <string name="pref_title_audio_fade">Fade Audio</string>
    <string name="pref_title_auto_play">Keep Play State</string>
    <string name="pref_title_blurred_album_art">Blur Album Cover</string>
    <string name="pref_title_circle_button">Circular Play Button</string>
    <string name="pref_title_colored_app">Adaptive Color</string>
    <string name="pref_title_custom_font">Font</string>
    <string name="pref_title_desaturated_color">Desaturated Color</string>
    <string name="pref_title_embed_lyrics_view">Embedded Lyrics View Type</string>
    <string name="pref_title_expand_now_playing_panel">Show Now Playing Screen</string>
    <string name="pref_title_extra_controls">Extra Controls</string>
    <string name="pref_title_extra_song_info">Song Info</string>
    <string name="pref_title_general_theme">App Theme</string>
    <string name="pref_title_lyrics_screen_on">Keep Screen On When Showing Lyrics</string>
    <string name="pref_title_lyrics_type">Lyrics Type</string>
    <string name="pref_title_manage_audio_focus">Always Play</string>
    <string name="pref_title_now_playing_screen_appearance">Now Playing Theme</string>
    <string name="pref_title_progress_bar_alignment">Progress Bar Alignment</string>
    <string name="pref_title_progress_bar_style">Progress Bar Style</string>
    <string name="pref_title_remember_tab">Remember Last Tab</string>
    <string name="pref_title_show_lyrics">Show Lyrics</string>
    <string name="pref_title_swipe_anywhere_now_playing">Swipe Anywhere To Change Song</string>
    <string name="pref_title_swipe_gestures">Swipe Gestures</string>
    <string name="pref_title_swipe_to_dismiss">Dismiss With Swipe Down</string>
    <string name="pref_title_synced_lyrics">Synced Lyrics</string>
    <string name="pref_title_tab_text_mode">Tab Titles Mode</string>
    <string name="pref_title_toggle_carousel_effect">Carousel Effect</string>
    <string name="pref_title_toggle_volume">Volume Controls</string>
    <string name="pref_title_wallpaper_accent">Wallpaper Accent Color</string>
</resources>