<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.ttop.app.apex.preferences.NowPlayingScreenPreference
        android:key="now_playing_screen_id"
        android:layout="@layout/list_item_view"
        android:title="@string/pref_title_now_playing_screen_appearance"
        app:icon="@drawable/ic_play_circle_filled" />

    <com.ttop.app.appthemehelper.common.prefs.supportv7.ATESwitchPreference
        android:defaultValue="false"
        android:key="queue_show_always"
        android:layout="@layout/list_item_view_switch"
        android:summary="@string/pref_summary_queue_show_always"
        android:title="@string/pref_title_queue_show_always"
        app:isPreferenceVisible="@bool/queue_show_always"/>

    <com.ttop.app.appthemehelper.common.prefs.supportv7.ATESwitchPreference
        android:defaultValue="false"
        android:key="extra_song_info"
        android:layout="@layout/list_item_view_switch"
        android:summary="@string/pref_summary_extra_song_info"
        android:title="@string/pref_title_extra_song_info" />

    <com.ttop.app.appthemehelper.common.prefs.supportv7.ATESwitchPreference
        android:defaultValue="false"
        android:key="snowfall"
        android:layout="@layout/list_item_view_switch_no_title"
        android:title="@string/pref_snow_fall_title" />

    <com.ttop.app.appthemehelper.common.prefs.supportv7.ATESwitchPreference
        android:defaultValue="false"
        android:key="screen_on_lyrics"
        android:layout="@layout/list_item_view_switch"
        android:summary="@string/pref_keep_screen_on_summary"
        android:title="@string/pref_title_lyrics_screen_on" />

    <com.ttop.app.appthemehelper.common.prefs.supportv7.ATESwitchPreference
        android:defaultValue="false"
        android:key="circle_play_button"
        android:layout="@layout/list_item_view_switch_no_title"
        android:title="@string/pref_title_circle_button" />

    <com.ttop.app.appthemehelper.common.prefs.supportv7.ATESwitchPreference
        android:defaultValue="true"
        android:key="swipe_anywhere_now_playing"
        android:layout="@layout/list_item_view_switch"
        android:summary="@string/pref_summary_swipe_anywhere_now_playing"
        android:title="@string/pref_title_swipe_anywhere_now_playing" />

    <com.ttop.app.appthemehelper.common.prefs.supportv7.ATESwitchPreference
        android:layout="@layout/list_item_view_switch"
        app:defaultValue="false"
        app:icon="@drawable/ic_expand_less"
        app:key="expand_now_playing_panel"
        app:summary="@string/pref_summary_expand_now_playing_panel"
        app:title="@string/pref_title_expand_now_playing_panel" />

    <com.ttop.app.appthemehelper.common.prefs.supportv7.ATEPreferenceCategory
        android:layout="@layout/preference_category_title"
        android:title="@string/pref_header_album">

        <com.ttop.app.apex.preferences.AlbumCoverStylePreference
            android:key="album_cover_style_id"
            android:layout="@layout/list_item_view"
            android:title="@string/pref_title_album_cover_style"
            app:icon="@drawable/ic_image" />

        <com.ttop.app.appthemehelper.common.prefs.supportv7.ATEListPreference
            android:defaultValue="0"
            android:entries="@array/pref_album_cover_transform_entries"
            android:entryValues="@array/pref_album_cover_transform_values"
            android:key="album_cover_transform"
            android:layout="@layout/list_item_view"
            android:title="@string/pref_title_album_cover_transform" />

        <com.ttop.app.appthemehelper.common.prefs.supportv7.ATESwitchPreference
            android:layout="@layout/list_item_view_switch"
            app:defaultValue="false"
            app:icon="@drawable/ic_view_carousel"
            app:key="carousel_effect"
            app:summary="@string/pref_summary_carousel_effect"
            app:title="@string/pref_title_toggle_carousel_effect" />
    </com.ttop.app.appthemehelper.common.prefs.supportv7.ATEPreferenceCategory>

    <com.ttop.app.appthemehelper.common.prefs.supportv7.ATEPreferenceCategory
        android:layout="@layout/preference_category_title"
        android:title="@string/pref_header_lyrics">

        <com.ttop.app.appthemehelper.common.prefs.supportv7.ATESwitchPreference
            android:defaultValue="false"
            android:key="lyrics"
            android:layout="@layout/list_item_view_switch"
            android:summary="@string/pref_summary_show_lyrics"
            android:title="@string/pref_title_show_lyrics" />

        <com.ttop.app.appthemehelper.common.prefs.supportv7.ATESwitchPreference
            android:defaultValue="false"
            android:key="synced_lyrics"
            android:layout="@layout/list_item_view_switch"
            android:title="@string/pref_title_synced_lyrics"
            android:summary="@string/pref_summary_synced_lyrics"
            android:dependency="lyrics"/>

        <com.ttop.app.appthemehelper.common.prefs.supportv7.ATEListPreference
            android:defaultValue="0"
            android:entries="@array/pref_lyrics_type_entries"
            android:entryValues="@array/pref_lyrics_type_values"
            android:key="lyrics_type"
            android:layout="@layout/list_item_view"
            android:title="@string/pref_title_lyrics_type"
            android:dependency="synced_lyrics"/>

        <com.ttop.app.appthemehelper.common.prefs.supportv7.ATEListPreference
            android:defaultValue="both"
            android:entries="@array/pref_embed_lyrics_entries"
            android:entryValues="@array/pref_embed_lyrics_values"
            android:key="embed_lyrics"
            android:layout="@layout/list_item_view"
            android:title="@string/pref_title_embed_lyrics_view"
            android:dependency="lyrics"/>
    </com.ttop.app.appthemehelper.common.prefs.supportv7.ATEPreferenceCategory>
</androidx.preference.PreferenceScreen>