<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.ttop.app.appthemehelper.common.prefs.supportv7.ATEPreferenceCategory
        android:layout="@layout/preference_category_title"
        android:title="@string/pref_header_library">

        <com.ttop.app.apex.preferences.LibraryPreference
            android:key="library_categories"
            android:layout="@layout/list_item_view"
            android:summary="@string/pref_summary_library_categories"
            android:title="@string/library_categories"
            app:icon="@drawable/ic_library_music" />

        <com.ttop.app.appthemehelper.common.prefs.supportv7.ATESwitchPreference
            android:defaultValue="true"
            android:key="remember_last_tab"
            android:layout="@layout/list_item_view_switch"
            android:summary="@string/pref_summary_remember_tab"
            android:title="@string/pref_title_remember_tab" />

        <com.ttop.app.appthemehelper.common.prefs.supportv7.ATEListPreference
            android:defaultValue="0"
            android:entries="@array/pref_tab_text_mode_titles"
            android:entryValues="@array/pref_tab_text_mode_values"
            android:key="tab_text_mode"
            android:layout="@layout/list_item_view"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_title_tab_text_mode" />

        <com.ttop.app.appthemehelper.common.prefs.supportv7.ATEListPreference
            android:defaultValue="1"
            android:entries="@array/pref_appbar_mode_titles"
            android:entryValues="@array/pref_appbar_mode_values"
            android:key="appbar_mode"
            android:layout="@layout/list_item_view"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_title_appbar_mode" />
    </com.ttop.app.appthemehelper.common.prefs.supportv7.ATEPreferenceCategory>

    <com.ttop.app.appthemehelper.common.prefs.supportv7.ATEPreferenceCategory
        android:layout="@layout/preference_category_title"
        android:title="@string/pref_header_lockscreen">

        <com.ttop.app.appthemehelper.common.prefs.supportv7.ATESwitchPreference
            android:defaultValue="true"
            android:key="album_art_on_lock_screen"
            android:layout="@layout/list_item_view_switch"
            android:summary="@string/pref_summary_album_art_on_lockscreen"
            android:title="@string/pref_title_album_art_on_lockscreen" />

        <com.ttop.app.appthemehelper.common.prefs.supportv7.ATESwitchPreference
            android:defaultValue="false"
            android:dependency="album_art_on_lock_screen"
            android:key="blurred_album_art"
            android:layout="@layout/list_item_view_switch"
            android:summary="@string/pref_summary_blurred_album_art"
            android:title="@string/pref_title_blurred_album_art" />
    </com.ttop.app.appthemehelper.common.prefs.supportv7.ATEPreferenceCategory>
</androidx.preference.PreferenceScreen>