<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.ttop.app.appthemehelper.common.prefs.supportv7.ATESwitchPreference
        android:defaultValue="true"
        android:key="audio_ducking"
        android:layout="@layout/list_item_view_switch"
        android:summary="@string/pref_summary_audio_ducking"
        android:title="@string/pref_title_audio_ducking"
        app:icon="@drawable/ic_volume_down"/>

    <com.ttop.app.apex.preferences.DurationPreference
        android:defaultValue="0"
        android:key="audio_fade_duration"
        android:layout="@layout/list_item_view"
        android:summary="@string/pref_summary_audio_fade"
        android:title="@string/pref_title_audio_fade" />

    <com.ttop.app.appthemehelper.common.prefs.supportv7.ATESwitchPreference
        android:defaultValue="false"
        android:key="manage_audio_focus"
        android:layout="@layout/list_item_view_switch"
        android:summary="@string/pref_summary_manage_audio_focus"
        android:title="@string/pref_title_manage_audio_focus" />

    <com.ttop.app.appthemehelper.common.prefs.supportv7.ATEPreference
        android:key="equalizer"
        android:layout="@layout/list_item_view_no_title"
        android:title="@string/equalizer"
        app:icon="@drawable/ic_equalizer" />

</androidx.preference.PreferenceScreen>